# libmatrix

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: adding_matrices.cpp  calculating_trace.cpp  determinant_matrix.cpp  fiiling_matrix_random.cpp  filling_matrix.cpp  filling_matrix_inline.cpp  matrix_inverse.cpp  matrix_power.cpp  minor_matrix.cpp  multiplying_matrices.cpp  rotating.cpp  rotation_matrices.cpp  subtracting_matrices.cpp  transposing.cpp
include/: Vector2D.cpp  Vector2D.h  _2DVector.cpp  _2DVector.h  consoleColor.cpp  consoleColor.h  console_color.cpp  console_color.h  matrix.cpp  matrix.h
src/: Vector2D.cpp  consoleColor.cpp  main.cpp  matrix.cpp
